# chip-8

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  create-release.yml  rust-clippy.yml
src/: chip8.rs  main.rs  window.rs
src/chip8/: cpu.rs  mod.rs  return_stack.rs
src/window/: audio.rs  mod.rs
